// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeCard should render the ThemeCard in Blue 1`] = `
<DocumentFragment>
  <a
    class="rounded block bg-blue-white hover:bg-blue-lighter shadow-themecard-blue"
    href="/"
  >
    <span
      class="flex md:h-24"
    >
      <span
        class="px-4 font-bold  my-4 text-body-large"
      >
        test
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`ThemeCard should render the ThemeCard in Green 1`] = `
<DocumentFragment>
  <a
    class="rounded block bg-green-lighter hover:bg-green-light shadow-themecard-green"
    href="/"
  >
    <span
      class="flex md:h-24"
    >
      <span
        class="px-4 font-bold  my-4 text-body-large"
      >
        test
      </span>
    </span>
  </a>
</DocumentFragment>
`;
